# news2discord

./: .gitignore  LICENSE  README.md  env.example  main.py  pyproject.toml
.kiro/specs/news-summarizer-webhook/: design.md  requirements.md  tasks.md
config/: example.cofnig.toml  example.config.toml
news2discord/: __init__.py
news2discord/flow/: __init__.py  judge.py  summarize.py
news2discord/models/: __init__.py  config.py  flow.py  notification.py  record.py
news2discord/notification/: discord.py
